--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: org.h2.Driver
 #    url: jdbc:h2:mem:~/test;MODE=MySQL;DATABASE_TO_UPPER=false
-    url: jdbc:h2:file:~/test;MODE=MySQL;DATABASE_TO_UPPER=false // file mode
+    url: jdbc:h2:file:~/test;MODE=MySQL;DATABASE_TO_UPPER=false # file mode
     username: sa
     password:
 
