--- a/stock-search-service/src/main/resources/application-kafka.yml
+++ b/stock-search-service/src/main/resources/application-kafka.yml
@@ -13,12 +13,12 @@ spring:
       - 127.0.0.1:19093
       - 127.0.0.1:19094
     consumer:
-      group-id: orgroup
+      group-id: search
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer # key 값은 String
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-#      value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer # protobuff 파일을 위해 ByteArrayDeserializer
+#      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer # protobuff 파일을 위해 ByteArrayDeserializer
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer  # key 값은 String
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-#      value-serializer: org.apache.kafka.common.serialization.ByteArraySerializer # protobuff 파일을 위해 ByteArrayDeserializer
+#      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.ByteArraySerializer # protobuff 파일을 위해 ByteArrayDeserializer
