--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,33 +29,33 @@ services:
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka1:9092,EXTERNAL://localhost:19092
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
 
-  kafka2:
-    image: confluentinc/cp-kafka:latest
-    depends_on:
-      zookeeper:
-        condition: service_healthy
-    ports:
-      - "19093:19093"
-    environment:
-      KAFKA_BROKER_ID: 2
-      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka2:9092,EXTERNAL://localhost:19093
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-
-  kafka3:
-    image: confluentinc/cp-kafka:latest
-    depends_on:
-      zookeeper:
-        condition: service_healthy
-    ports:
-      - "19094:19094"
-    environment:
-      KAFKA_BROKER_ID: 3
-      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka3:9092,EXTERNAL://localhost:19094
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+#  kafka2:
+#    image: confluentinc/cp-kafka:latest
+#    depends_on:
+#      zookeeper:
+#        condition: service_healthy
+#    ports:
+#      - "19093:19093"
+#    environment:
+#      KAFKA_BROKER_ID: 2
+#      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+#      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka2:9092,EXTERNAL://localhost:19093
+#      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+#
+#  kafka3:
+#    image: confluentinc/cp-kafka:latest
+#    depends_on:
+#      zookeeper:
+#        condition: service_healthy
+#    ports:
+#      - "19094:19094"
+#    environment:
+#      KAFKA_BROKER_ID: 3
+#      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+#      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka3:9092,EXTERNAL://localhost:19094
+#      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
 
   # Infra services
 #  cassandra-node-0:
